--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-// En attente de la finalisation du graphisme
 body {
   margin: 0;
   padding: 0;
@@ -12,11 +11,10 @@ body {
 }
 
 .logo {
-  font-family: "Montserrat", sans-serif;
-  font-size: 40px;
-  font-weight: 900;
-  font-style: italic;
-  color: #9be2f2;
+  width: 10em;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .bienvenue {
@@ -63,7 +61,8 @@ body {
 #formulaire {
   background-color: #011126;
   padding: 60px 20px;
-  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .form-title {
