--- a/index.css
+++ b/index.css
@@ -1,9 +1,13 @@
 body {
-  margin: 0;
+  margin: 50px;
   padding: 0;
   font-family: "Open Sans", sans-serif;
   background-color: #011126;
   color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .top-bar {
@@ -23,7 +27,7 @@ body {
   font-style: normal;
   text-align: center;
   font-size: 48px;
-  color: #f24607;
+  color: #f26e22;
   text-shadow: 0px 0px 8px rgba(155, 226, 242, 0.2),
     2px 2px 6px rgba(0, 0, 0, 0.25);
   margin-top: 40px;
@@ -59,10 +63,10 @@ body {
 
 /* formul. */
 #formulaire {
-  background-color: #011126;
-  padding: 60px 20px;
-  display: flex;
-  justify-content: center;
+  background-color: #f26e22;
+  padding: 20px 20px;
+  width: 40%;
+  border-radius: 8px;
 }
 
 .form-title {
