--- a/index.css
+++ b/index.css
@@ -59,10 +59,9 @@ body {
 
 /* formulaire */
 #formulaire {
-  margin-top: 100px;
-  border-color: #f26e22;
-  border-width: 2px;
-  padding: 20px 20px;
+  margin: 140px 0px;
+  border: solid 2px #f26e22;
+  padding: 10px 50px;
   width: 40%;
   border-radius: 8px;
 }
